--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadow-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,11 +8,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@noble/hashes": "^1.8.0",
-    "viem": "^2.38.3"
-  },
   "devDependencies": {
     "vite": "^7.1.5"
+  },
+  "dependencies": {
+    "lucide": "^0.575.0"
   }
 }
