feat: improve docker:build npm command with platform flag and circuit ID output
- Add --platform linux/amd64 to docker:build (required by RISC Zero toolchain)
- Print circuit ID from image labels after successful build
- Document docker build process in README with pnpm docker:build command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "server:build": "cargo build --release --manifest-path packages/server/Cargo.toml",
     "server:dev": "cargo run --manifest-path packages/server/Cargo.toml -- --workspace . --port 3000",
     "server:test": "cargo test --manifest-path packages/server/Cargo.toml",
-    "docker:build": "docker build -f docker/Dockerfile -t shadow-local .",
+    "docker:build": "docker build --platform linux/amd64 -f docker/Dockerfile -t shadow-local . && echo && echo 'Circuit ID:' && docker inspect --format '{{index .Config.Labels \"org.taikoxyz.shadow.circuit-id\"}}' shadow-local",
     "docker:run": "docker run --rm -p 3000:3000 -v $(pwd)/workspace:/workspace shadow-local",
     "test": "pnpm run contracts:test"
   }
