Make Docker publish manual and move status tag

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,6 @@
-name: Build and Publish Docker Image
+name: Publish Docker Image (Manual)
 
 on:
-  # Trigger when "rebuild-docker-image" label is added to a PR
-  pull_request:
-    types: [labeled]
-  # Manual trigger
   workflow_dispatch:
     inputs:
       tag:
@@ -12,9 +8,9 @@ on:
         required: false
         default: 'dev'
 
-# Cancel in-progress runs when a new run is triggered on the same branch/PR
+# Cancel in-progress runs when a new run is triggered on the same ref
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 env:
@@ -24,12 +20,6 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    # Only run if:
-    # 1. Label "rebuild-docker-image" was added to a PR, OR
-    # 2. Manually triggered via workflow_dispatch
-    if: >
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && github.event.label.name == 'rebuild-docker-image')
     permissions:
       contents: read
       packages: write
@@ -76,12 +66,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            # For workflow_dispatch, use the input tag
-            type=raw,value=${{ github.event.inputs.tag }},enable=${{ github.event_name == 'workflow_dispatch' }}
-            # For PR builds, tag as pr-<number>
-            type=raw,value=pr-${{ github.event.pull_request.number }},enable=${{ github.event_name == 'pull_request' }}
-            # Tag as latest for workflow_dispatch with 'latest' input
-            type=raw,value=latest,enable=${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag == 'latest' }}
+            # Manual publish tag from workflow input
+            type=raw,value=${{ inputs.tag }}
+            # Add latest only when explicitly requested
+            type=raw,value=latest,enable=${{ inputs.tag == 'latest' }}
             # Always include the short SHA
             type=sha,prefix=
             # Circuit ID tag
@@ -103,6 +91,7 @@ jobs:
 
       - name: Generate build summary
         run: |
+          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ inputs.tag }}"
           echo "## Docker Image Published" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Registry:** \`${{ env.REGISTRY }}\`" >> $GITHUB_STEP_SUMMARY
@@ -116,9 +105,9 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Usage" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ${IMAGE}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "docker run --rm -v \$(pwd):/data \\" >> $GITHUB_STEP_SUMMARY
-          echo "  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \\" >> $GITHUB_STEP_SUMMARY
+          echo "  ${IMAGE} \\" >> $GITHUB_STEP_SUMMARY
           echo "  /data/my-deposit.json" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
